# hello_tls

./: .gitignore  LICENSE  README.md  hello_tls.py  pyproject.toml
.github/workflows/: lint_and_mypy.yml  lint_tests_types.yml  publish.yml  python-app.yml
src/hello_tls/: __init__.py  __main__.py  names_and_numbers.py  protocol.py  scan.py
tests/: test_scan.py
