[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_tls"
version = "0.4.0"
authors = [
  { name="BoppreH", email="github@boppreh.com" },
]
description = "Create TLS Client Hello messages and scan server capabilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyOpenSSL>=23.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/boppreh/hello_tls"
"Bug Tracker" = "https://github.com/boppreh/hello_tls/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.coverage.run]
branch = true
command_line = "-m pytest"